# ztlctl

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  main.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml  release.yml
docs/: BAT.md  TASKS.md  USE-CASES.md  USER-JOURNEYS.md  _config.yml  agentic-workflows.md  commands.md  concepts.md  configuration.md  development.md  index.md  installation.md  mcp.md  paradigms.md  quickstart.md  troubleshooting.md  tutorial.md
docs/bat/: BUGS.md  SUMMARY.md
docs/bat/critiques/: cat-01-vault-init.md  cat-02-content-creation.md  cat-03-search-retrieval.md  cat-04-updates-lifecycle.md  cat-05-graph-operations.md  cat-06-reweave.md  cat-07-sessions.md  cat-08-integrity.md  cat-09-export.md  cat-10a-mcp.md  cat-10b-plugins-events.md  cat-10c-semantic-search.md  cat-11-cross-cutting.md
docs/plans/: 2026-02-26-verbose-telemetry-impl.md  2026-02-27-post-create-reweave-design.md  2026-02-28-trunk-based-migration-design.md  2026-02-28-trunk-based-migration-plan.md
docs/plans/archive/: 2026-02-26-verbose-telemetry-design.md  2026-02-27-post-create-reweave-impl.md  2026-02-27-quick-wins-and-semantic-search-design.md  2026-02-27-quick-wins-and-semantic-search.md
notes/: ztl_bf9ebfc1.md
ops/tasks/: TASK-0001.md  TASK-0002.md
plugin/: CLAUDE.md  plugin.json
src/ztlctl/: __init__.py  __main__.py  cli.py
src/ztlctl/commands/: __init__.py  _base.py  _context.py  agent.py  archive.py  check.py  create.py  export.py  extract.py  garden.py  graph.py  init_cmd.py  query.py  reweave.py  serve.py  supersede.py  update.py  upgrade.py  vector.py  workflow.py
src/ztlctl/config/: __init__.py  discovery.py  logging.py  models.py  settings.py
src/ztlctl/domain/: __init__.py  content.py  frontmatter.py  ids.py  lifecycle.py  links.py  subtypes.py  tags.py  types.py
src/ztlctl/infrastructure/: __init__.py  embeddings.py  filesystem.py  templates.py  vault.py
src/ztlctl/mcp/: __init__.py  prompts.py  resources.py  server.py  tools.py
tests/: __init__.py  conftest.py  test_cli.py  test_workflows.py
tests/commands/: test_agent.py  test_agent_session.py  test_archive.py  test_batch_create.py  test_check.py  test_cost_flag.py  test_create.py  test_examples.py  test_export.py  test_extract.py  test_garden.py  test_git_missing_runtime.py  test_graph.py  test_help.py  test_init.py  test_query.py  test_reweave.py  test_serve.py  test_session.py  test_supersede.py  test_update.py  test_upgrade.py  test_vector.py  test_workflow_cmd.py
tests/config/: test_discovery.py  test_logging.py  test_models.py  test_settings.py
tests/domain/: test_content.py  test_ids.py  test_lifecycle.py  test_links.py  test_subtypes.py  test_tags.py  test_types.py
tests/infrastructure/: test_embeddings.py  test_filesystem.py  test_vault.py
tests/integration/: test_performance.py  test_semantic_extra.py  test_verbose_telemetry.py
tests/mcp/: __init__.py  test_resources.py  test_server.py  test_stdio_integration.py  test_tools.py
tests/output/: __init__.py  test_console.py  test_formatters.py  test_renderers.py  test_telemetry_rendering.py
tests/plugins/: __init__.py  test_event_bus.py  test_git_plugin.py  test_local_discovery.py  test_manager.py  test_reweave_plugin.py
tests/services/: test_base.py  test_check.py  test_contracts.py  test_create.py  test_event_dispatch.py  test_export.py  test_graph.py  test_helpers.py  test_init.py  test_query.py  test_query_semantic.py  test_result.py  test_reweave.py  test_session.py  test_telemetry.py  test_update.py  test_upgrade.py  test_vector.py  test_workflow.py
(+69 files in other folders)
