[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ztlctl"
version = "0.1.0"
description = "Zettelkasten Control — CLI utility for managing a Zettelkasten note-taking system"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
dependencies = [
    "click>=8.1",
]

[project.scripts]
ztlctl = "ztlctl.cli:cli"

[dependency-groups]
dev = [
    "pre-commit>=4.0",
    "mypy>=1.13",
    { include-group = "test" },
    { include-group = "lint" },
]
test = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
]
lint = [
    "ruff>=0.8",
]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "RUF"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"
packages = ["ztlctl"]

[tool.coverage.run]
source = ["ztlctl"]
branch = true
omit = ["src/ztlctl/__main__.py"]

[tool.coverage.report]
show_missing = true
fail_under = 80
