[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ztlctl"
version = "0.1.0"
description = "Zettelkasten Control — CLI utility for managing a Zettelkasten note-taking system"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
dependencies = [
    "click>=8.1",
    "pydantic>=2.0",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "networkx>=3.0",
    "ruamel.yaml>=0.18",
    "jinja2>=3.1",
    "pluggy>=1.4",
    "rich>=13.0",
    "pydantic-settings>=2.13.1",
    "scipy>=1.17.1",
    "structlog>=24.0",
    "copier>=9.12.0",
]

[project.scripts]
ztlctl = "ztlctl.cli:cli"

[project.optional-dependencies]
mcp = ["mcp>=1.0", "anyio>=4.0"]
community = ["leidenalg"]
semantic = ["sqlite-vec>=0.1", "sentence-transformers>=2.2"]

[project.entry-points."ztlctl.plugins"]
git = "ztlctl.plugins.builtins.git:GitPlugin"

[dependency-groups]
dev = [
    "commitizen>=4.1",
    "pre-commit>=4.0",
    "mypy>=1.13",
    "types-networkx>=3.6.1.20260210",
    { include-group = "test" },
    { include-group = "lint" },
]
test = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
]
lint = [
    "ruff>=0.8",
]

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/ztlctl"]

[tool.hatch.build.targets.wheel.force-include]
"src/ztlctl/templates" = "ztlctl/templates"

[tool.hatch.build.targets.sdist.force-include]
"src/ztlctl/templates" = "src/ztlctl/templates"

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "RUF"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"
packages = ["ztlctl"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "ztlctl.mcp.*"
warn_unused_ignores = false

[tool.coverage.run]
source = ["ztlctl"]
branch = true
omit = [
    "src/ztlctl/__main__.py",
    "src/ztlctl/mcp/*",
    "src/ztlctl/services/session.py",
    "src/ztlctl/services/reweave.py",
    "src/ztlctl/services/check.py",
    "src/ztlctl/plugins/*",
]

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "pep621"
version_files = [
    "src/ztlctl/__init__.py:__version__",
]
update_changelog_on_bump = true
changelog_file = "CHANGELOG.md"
tag_format = "v$version"
bump_message = "release: v$new_version"
annotated_tag = true
